v7.1
-----


v7.0
-----
+ Added the ability to set any number of regional price comparisons
+ Added highlighting and tags back to the Friend Activity page
+ Added a button to easily decline trade offers (even invalid ones)
+ Added an option to show a warning on items where cross region trading has been disabled
+ Added UI elements to continuous scrolling feature and the ability to retry when it fails
+ Enhanced Steam will now show bundle savings calculations on bundles with no savings
: Updated wishlist code to work with the new page layout and design
: Updated Canadian currency formatting
: Updated Early Access banners to work with more store sections
: Fixed a bug in market total calculations
: Fixed a bug in the home page customization

v6.9
-----
+ Added a "Customize" button the the "All New Releases" section
+ Added option to hide "Items under $10" section on home page
+ Added a "remove" button to the custom background selection dialog
: Fixed a bug with Euro price formatting
: Fixed a bug that caused some packages not to process savings calculations corectly (again)
: Fixed several bugs with the home page customization options

v6.8
-----
+ Completely re-wrote how Enhanced Steam handles highlighting to be faster and more accurate
+ Added a "Customize" button to app pages that lets you decide which sections to display
+ Added a "Customize" button to the home page that lets you decide which sections to display
+ Added "Rewards from Playfire" to applicable app pages (thanks mouse0270!)
+ Added an "All New Releases" tab to Steam home page
: Fixed a memory leak caused by continous scrolling function in some instances
: Fixed account total spent feature to work with the new account page design
: Fixed a bug that caused coupon discounts to not display properly on app pages
: Fixed the placement of regional price comparison box on sale pages
: Fixed the spacing of the "Popular" tab on the home page