@@ -1,5 +1,6 @@
 v7.1
 -----
+: Fixed an issue where inventory price info was in USD regardless of the user's currency
 
 
 v7.0
